--- a/Engine/Project/Engine.vcxproj.filters
+++ b/Engine/Project/Engine.vcxproj.filters
@@ -142,6 +142,7 @@
     <ClCompile Include="..\Source\Physics.cpp">
       <Filter>01.System\07.Physics\01.Interface</Filter>
     </ClCompile>
+    <ClCompile Include="..\Source\FLight.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Resource\Shader\Effect\OvertureHand.hlsl">
@@ -364,6 +365,7 @@
       <Filter>01.System\07.Physics\01.Interface</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Resource\Shader\Effect\Glint.hlsl" />
+    <ClInclude Include="..\Header\FLight.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="00.Object">
