포인트라이트 디렉셔널 라이트 큐브맵 쉐도우 구현중 렌더러 변경전 커밋

--- a/Engine/Project/Engine.vcxproj
+++ b/Engine/Project/Engine.vcxproj
@@ -292,7 +292,7 @@ call Engine.bat</Command>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Resource\Shader\ForwardAlphaBlendSK.hlsl">
-      <FileType>Document</FileType>
+      <FileType>HLSL</FileType>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClInclude>
   </ItemGroup>
@@ -349,12 +349,20 @@ call Engine.bat</Command>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\Resource\Shader\Effect\Glint.hlsl">
+    <None Include="..\..\Resource\Shader\Effect\Glint.hlsl">
       <FileType>Document</FileType>
-    </ClInclude>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\Resource\Shader\DeferredShading.hlsl">
+      <FileType>Document</FileType>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\Resource\Shader\Blur.hlsl">
+      <FileType>Document</FileType>
+    </None>
+    <None Include="..\..\Resource\Shader\ShadowMap.hlsl">
       <FileType>Document</FileType>
     </None>
   </ItemGroup>
