포인트 라이트 방향 큐브 쉐도우 계속 구현중

--- a/Engine/Project/Engine.vcxproj
+++ b/Engine/Project/Engine.vcxproj
@@ -186,6 +186,7 @@ call Engine.bat</Command>
     <ClInclude Include="..\Header\AssimpHelper.hpp" />
     <ClInclude Include="..\Header\Collider.h" />
     <ClInclude Include="..\Header\CollisionCallback.h" />
+    <ClInclude Include="..\Header\Color.h" />
     <ClInclude Include="..\Header\FLight.h" />
     <ClInclude Include="..\Header\IconsFontAwesome5.h" />
     <ClInclude Include="..\Header\Node.h" />
@@ -248,6 +249,7 @@ call Engine.bat</Command>
     <ClCompile Include="..\Source\AnimNotify.cpp" />
     <ClCompile Include="..\Source\Collider.cpp" />
     <ClCompile Include="..\Source\CollisionCallback.cpp" />
+    <ClCompile Include="..\Source\Color.cpp" />
     <ClCompile Include="..\Source\FLight.cpp" />
     <ClCompile Include="..\Source\Node.cpp" />
     <ClCompile Include="..\Source\Component.cpp" />
@@ -364,7 +366,17 @@ call Engine.bat</Command>
     <None Include="..\..\Resource\Shader\Blur.hlsl">
       <FileType>Document</FileType>
     </None>
-    <None Include="..\..\Resource\Shader\ShadowMap.hlsl">
+    <None Include="..\..\Resource\Shader\Shadow.hlsl">
+      <FileType>Document</FileType>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\Resource\Shader\ShadowSK.hlsl">
+      <FileType>Document</FileType>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\Resource\Shader\RTDebug.hlsl">
       <FileType>Document</FileType>
     </None>
   </ItemGroup>
