--- a/Engine/Project/Engine.vcxproj.filters
+++ b/Engine/Project/Engine.vcxproj.filters
@@ -144,6 +144,7 @@
     </ClCompile>
     <ClCompile Include="..\Source\FLight.cpp" />
     <ClCompile Include="..\Source\Quad.cpp" />
+    <ClCompile Include="..\Source\Color.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Resource\Shader\Effect\OvertureHand.hlsl">
@@ -367,6 +368,7 @@
     </ClInclude>
     <ClInclude Include="..\Header\FLight.h" />
     <ClInclude Include="..\Header\Quad.h" />
+    <ClInclude Include="..\Header\Color.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="00.Object">
@@ -534,8 +536,10 @@
     <None Include="..\..\Resource\Shader\DeferredShading.hlsl">
       <Filter>04.HLSL</Filter>
     </None>
-    <None Include="..\..\Resource\Shader\ShadowMap.hlsl" />
+    <None Include="..\..\Resource\Shader\Shadow.hlsl" />
     <None Include="..\..\Resource\Shader\Effect\Glint.hlsl" />
     <None Include="..\..\Resource\Shader\Blur.hlsl" />
+    <None Include="..\..\Resource\Shader\ShadowSK.hlsl" />
+    <None Include="..\..\Resource\Shader\RTDebug.hlsl" />
   </ItemGroup>
 </Project>
