--- a/Client/Project/Client.vcxproj
+++ b/Client/Project/Client.vcxproj
@@ -165,7 +165,10 @@
     <ClInclude Include="..\Header\DashImpact.h" />
     <ClInclude Include="..\Header\Effect.h" />
     <ClInclude Include="..\Header\Eff_Glint.h" />
+    <ClInclude Include="..\Header\Em0000.h" />
+    <ClInclude Include="..\Header\Em0000_Weapon.h" />
     <ClInclude Include="..\Header\Em100.h" />
+    <ClInclude Include="..\Header\Em101.h" />
     <ClInclude Include="..\Header\FSMBase.h" />
     <ClInclude Include="..\Header\FSMState.h" />
     <ClInclude Include="..\Header\Monster.h" />
@@ -190,7 +193,10 @@
     <ClCompile Include="..\Source\DashImpact.cpp" />
     <ClCompile Include="..\Source\Effect.cpp" />
     <ClCompile Include="..\Source\Eff_Glint.cpp" />
+    <ClCompile Include="..\Source\Em0000.cpp" />
+    <ClCompile Include="..\Source\Em0000_Weapon.cpp" />
     <ClCompile Include="..\Source\Em100.cpp" />
+    <ClCompile Include="..\Source\Em101.cpp" />
     <ClCompile Include="..\Source\FSMBase.cpp" />
     <ClCompile Include="..\Source\FSMState.cpp" />
     <ClCompile Include="..\Source\Monster.cpp" />
