--- a/Engine/Project/Engine.vcxproj
+++ b/Engine/Project/Engine.vcxproj
@@ -188,6 +188,7 @@ call Engine.bat</Command>
     <ClInclude Include="..\Header\Collider.h" />
     <ClInclude Include="..\Header\CollisionCallback.h" />
     <ClInclude Include="..\Header\Color.h" />
+    <ClInclude Include="..\Header\DxHelper.h" />
     <ClInclude Include="..\Header\FLight.h" />
     <ClInclude Include="..\Header\IconsFontAwesome5.h" />
     <ClInclude Include="..\Header\Node.h" />
@@ -297,6 +298,7 @@ call Engine.bat</Command>
     <ClCompile Include="..\Source\TimeSystem.cpp" />
     <ClCompile Include="..\Source\Transform.cpp" />
     <ClCompile Include="..\Source\_3Dmath.cpp" />
+    <ClCompile Include="DxHelper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Resource\Shader\ForwardAlphaBlendSK.hlsl">
