FSM 바꾸기전 백업

--- a/Client/Project/Client.vcxproj
+++ b/Client/Project/Client.vcxproj
@@ -167,6 +167,7 @@
     <ClInclude Include="..\Header\NeroFSM.h" />
     <ClInclude Include="..\Header\Nero.h" />
     <ClInclude Include="..\Header\NeroState.h" />
+    <ClInclude Include="..\Header\RedQueen.h" />
     <ClInclude Include="..\Header\TestAnimationObject.h" />
     <ClInclude Include="..\Header\Eff_OvertureHand.h" />
     <ClInclude Include="..\Header\TestObject.h" />
@@ -188,6 +189,7 @@
     <ClCompile Include="..\Source\NeroFSM.cpp" />
     <ClCompile Include="..\Source\Nero.cpp" />
     <ClCompile Include="..\Source\NeroState.cpp" />
+    <ClCompile Include="..\Source\RedQueen.cpp" />
     <ClCompile Include="..\Source\TestAnimationObject.cpp" />
     <ClCompile Include="..\Source\Eff_OvertureHand.cpp" />
     <ClCompile Include="..\Source\TestObject.cpp" />
