--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,18 @@ Em5000.fbx
 Em5000.FBX
 Em5000.x
 Em5000.X
+Em0000.X
+Em0000.fbx
+Em0000.x
+Em0000.FBX
+Em5900.fbx
+Em5900.FBX
+Em5900.x
+Em5900.X
+Em5300.fbx
+Em5300.x
+Em5300.FBX
+Em5300.X
 Tester.pdf
 ###            ###
 
