--- a/Client/Project/Client.vcxproj
+++ b/Client/Project/Client.vcxproj
@@ -169,6 +169,7 @@
     <ClInclude Include="..\Header\Em0000_Weapon.h" />
     <ClInclude Include="..\Header\Em100.h" />
     <ClInclude Include="..\Header\Em101.h" />
+    <ClInclude Include="..\Header\Em5000.h" />
     <ClInclude Include="..\Header\FSMBase.h" />
     <ClInclude Include="..\Header\FSMState.h" />
     <ClInclude Include="..\Header\Monster.h" />
@@ -197,6 +198,7 @@
     <ClCompile Include="..\Source\Em0000_Weapon.cpp" />
     <ClCompile Include="..\Source\Em100.cpp" />
     <ClCompile Include="..\Source\Em101.cpp" />
+    <ClCompile Include="..\Source\Em5000.cpp" />
     <ClCompile Include="..\Source\FSMBase.cpp" />
     <ClCompile Include="..\Source\FSMState.cpp" />
     <ClCompile Include="..\Source\Monster.cpp" />
